--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server --watch server.json --port 3333"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "axios": "^0.27.2",
+    "framer-motion": "6",
+    "json-server": "^0.17.0",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "swiper": "^8.1.4"
   },
   "devDependencies": {
     "@types/node": "17.0.30",
